<resources>
    <string name="app_name">Calpal</string>
    <string name="API_KEY">450132906604-m1j0a9qtq1vbvoqr0olgr6udnjeifm02.apps.googleusercontent.com</string>
    <string name="calpal_background_splash">Calpal_Background_Splash</string>
    <string name="calpal_logo">Calpal_Logo</string>
    <string name="sign_in_text">Continue with Google\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">Title</string>
    <string name="time_slot_needed">Time Slot Needed:</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="location">Location</string>
    <string name="add_participants">Add Participants</string>
    <string name="hrs">hrs</string>
    <string name="mins">mins</string>
</resources>
